[package]
authors = ["fuxingZhang<fuxing.zhang@qq.com>"]
description = "UI components for the GPUI"
name = "rui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
gpui.workspace = true
rui_macros.workspace = true
