[package]
name = "rui_macros"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true
doctest = false

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
