[package]
name = "story"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
gpui.workspace = true
rui.workspace = true
rui_macros.workspace = true
strum = { workspace = true, features = ["derive"] }
reqwest_client = { git = "https://github.com/zed-industries/zed" }
