[package]
authors = ["fuxingZhang<fuxing.zhang@qq.com>"]
description = "UI components for the GPUI"
name = "ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
gpui.workspace = true
ui_macros.workspace = true
